--- a/src/templates/partials/partial-visual.hbs
+++ b/src/templates/partials/partial-visual.hbs
@@ -2,7 +2,7 @@
     <div class="container visual-bar-inner">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
-                 <p>Some of my recent projects</p>
+                 <h3>Some of my recent projects</h3>
             </div>
         </div>
     </div>
