--- a/src/templates/partials/partial-address.hbs
+++ b/src/templates/partials/partial-address.hbs
@@ -8,13 +8,13 @@
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
 				<div class="icon"><i class="fa fa-map-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Address</h4>
+				<p class="h4">Address</p>
 				<p class="paragraph m-b-0">Gasthuisstraat 48, 2011 XP Haarlem, The Netherlands
 				</p>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
 				<div class="icon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Openingstijden</h4>
+				<p class="h4">Openingstijden</p>
 				<p class="paragraph m-b-0">
 					Ma t/m Vr 8.00 - 18.00<br />
 					Zaterdag 8.00 - 17.30<br />
@@ -23,7 +23,7 @@
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
 				<div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Contact</h4>
+				<p class="h4">Contact</p>
 				<p class="paragraph m-b-0">
 					E-mail: <a href="#">yourname@domain.com</a><br />
 					Phone: +40 (0) 012 345 6789
